<?xml version="1.0" encoding="utf-8"?>
<!--
  Catroid: An on-device visual programming system for Android devices
   Copyright (C) 2010-2013 The Catrobat Team
   (<http://developer.catrobat.org/credits>)
   
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU Affero General Public License as
   published by the Free Software Foundation, either version 3 of the
   License, or (at your option) any later version.
  
   An additional term exception under section 7 of the GNU Affero
   General Public License, version 3, is available at
   http://www.catroid.org/catroid/licenseadditionalterm
  
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
   GNU Affero General Public License for more details.
  
   You should have received a copy of the GNU Affero General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

  <string name="app_name">Musicdroid</string>
  <string name="action_settings">Settings</string>
  <string name="hello_world">Hello world!</string>
  <string name="menu_item_mic">Mic</string>
  <string name="menu_item_piano">Piano</string>
  <string name="menu_item_drums">Drums</string>
  <string name="menu_item_add">Add</string>
  
  <string name="sound_track_menu_entry_delete">Delete</string>
  <string name="sound_track_menu_entry_edit">Edit</string>
  <string name="sound_track_menu_entry_copy">Copy</string>
  <string name="sound_mixer_menu_entry_length">Track Length</string>
  <string name="sound_mixer_menu_entry_bpm">Beats per Minute</string>
  
  <string name="menu_new_song">New song</string>
  <string name="menu_load_song">Load song</string>
  <string name="menu_save_song">Save song</string>
  <string name="menu_hide_menu">Full Screen</string>
  <string name="menu_about">About</string>
  <string name="menu_quit">Quit</string>
  <string name="menu_preferences">Settings</string>
  <string name="dialog_add_sound_title">Add Sound</string>
  <string name="dialog_sound_track_menu">What do you want to do</string>
  <string name="dialog_warning_file_overwritten_at_record">A file with this name already exists. It will be lost if you record a new sound. Continue anyways?</string>
  <string name="dialog_change_filename_title">Enter a new Filename</string>
  
  <string name="timeline_menu_entry_start_point">Set Start</string>
  <string name="timeline_menu_entry_end_point">Set End</string>
  
  <string name="dialog_warning_new_song">Your song will be lost!\nContinue anyways?</string>
  <string name="save_suggestion">If you want to save your song click Menu and Save Song</string>
  <string name="closing_security_question">Exit?\n\nYour song will be lost if it is not saved!</string>
  <string name="on_recorder_back_pressed_security_question">Return to SoundMixer?\n\nYour recorded song will be lost!</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="dialog_continue">Continue</string>
  <string name="dialog_abort">Abort</string>
  <string name="dialog_export">Export</string>
  <string name="dialog_ok">OK</string>
  
  
  
  <string name ="play_button_text">Play Song</string>
  <string name ="stop_button_text">Stop Song</string>
   
  <string name="settings_current_length_title">Maximal Song Length</string>
  <string name="settings_default_length_title">Default Song Length</string>
  <string name="settings_metronom_quick_title">Metronom Settings</string>
  <string name="settings_sound_track_length_description">Set maximal duration of your Song</string>
  <string name="settings_button_apply">Apply</string>
  <string name="settings_button_discard">Discard</string>
  <string name="soundmixer_context_title">"Mixer Settings"</string>
  
  <string name="preferences_category_soundmixer_title">Sound Mixer Settings</string>
  <string name="preferences_category_recorder_title">Recorder Settings</string>
  <string name="preferences_max_soundmixer_length_summary">Click so you can set the default length of the sound mixer </string>
  <string name="preferences_max_soundmixer_length_title">Default Sound Length</string>
  <string name="preferences_bpm_second_summary">Display Beats per Minute (BPM) in Timeline instead of Seconds?</string>
  <string name="preferences_bpm_second_title">SoundMixer-Timeline Unit</string>
  <string name="preferences_category_sound_title">Song Settings</string>
  <string name="preferences_set_bpm_summary">Here you can set the default value for Beats Per Minute (bpm) </string>
  <string name="preferences_set_bpm_title">Default BPM</string>
  <string name="preferences_playback_summary">Do you want to here all Sounds inside the SoundMixer while Recording? (Headphones recommended) </string>
  <string name="preferences_playback">Play Playback</string>
  <string name="preferences_add_at_current_position_summary">Do you want to add recorded Sounds at the SoundMixer\'s current position? </string>
  <string name="preferences_add_at_current_position">Add to current position</string>
  <string name="preferences_display_bpm_title">Metronom Display Settings</string>
  <string name="preferences_display_bpm_summary">Switch it on/off, blinking Light, clicking Sound or both</string>
  <string name="preferences_bpm_title">Metronom Settings</string>
  <string name="preferences_bpm_summary">Set Beats per Minute. Switch it on/off, blinking Light, clicking Sound or both</string>
  <string name="preferences_draw_notes_title">Settings for drawing notes</string>
  <string name="preferences_draw_notes_bass_key">Draw notes in bass key</string>
  <string name="preferences_draw_notes_bass_key_summary">Do you want to see the notes in bass key?</string>
  
  <string name="help_menu_new_recording">Click me if you want to record yourself</string>
  <string name="help_menu_new_piano">Click me if you want to play the piano and add it to your song</string>
  <string name="help_menu_new_drums">Click me if you want to play the drums and add it to your song</string>
  
  <string name="help_sound_track_menu_entry_delete">Delete this track</string>
  <string name="help_sound_track_menu_entry_edit">Edit this track if it is a MIDI File</string>
  <string name="help_sound_track_menu_entry_copy">Copy this track</string>
  
  <string name="toast_empty_soundmixer">Sorry, no sounds to play.\nAdd your own sounds by clicking the top-right add-button</string>
  <string name="warning_invalid_marker_position">Sorry, EndPoint can not be put before StartPoint!</string>
  
  <string name="recorder_toast_no_file_recorded">Sorry, no sound to play, have you recorded one?</string>
  <string name="recorder_add_to_sound_mixer_text">Add Sound to SoundMixer</string>
  <string name="recorder_playback">Playback while Recording</string>
  <string name="recorder_context_title">Recorder Settings</string>
  <string name="recorder_menu_entry_playback">Play Playback</string>
  <string name="recorder_menu_entry_metronom">Play Metronom</string>
  <string name="drums_menu_clear">clear</string>
  <string name="drums_menu_settings">Settings</string>
  <string name="drums_menu_delete_button">delete</string>
  <string name="drums_menu_bpm_button">BPM</string>  
  <string name="drums_add_to_sound_mixer_text">Add Drum-Loop to SoundMixer</string>
  <string name="drums_load_preset_text">Load Preset</string>
  
  <string name="drums_menu_entry_bpm">Beats per Minute</string>
  <string name="drums_menu_play_button">Play</string>
  <string name="drums_menu_entry_clear_preset">Clear Preset</string>
  <string name="drums_menu_entry_load_preset">Load Preset</string>
  <string name="drums_menu_entry_save_preset">Save Preset</string>
  <string name="drum_sound_export_duration_text">Duration (Sec)</string>
  <string name="drum_sound_export_dialog_title">Export Drum Sound</string>
  <string name="drum_sound_export_num_loops_description_text">Number of Loops</string>
  <string name="drums_menu_export_button">EXPORT</string>
  
 <string name="base_drum">Base Drum</string>
  <string name="snare_drum">Snare Drum</string>
  <string name="snare_drum_hard">Snare Drum Hard</string>
  <string name="high_hat_closed">High Hat Closed</string>
  <string name="high_hat_open">High Hat Open</string>
  <string name="tom_1">Tom 1</string>
  <string name="tom_2">Tom 2</string>
  <string name="tom_3">Tom 3</string>
  <string name="crash_one">Crash One</string>
  <string name="ride">Ride</string>
  
  <string name="drums_add_to_sound_mixer_text">Add Drum-Loop to SoundMixer</string>
  <string name="drums_load_preset_text">Load Preset</string>
  
  
</resources>
