<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/preferences_category_soundmixer_title">
        <Preference
            android:summary="@string/preferences_max_soundmixer_length_summary"
            android:title="@string/preferences_max_soundmixer_length_title"
            android:key="preferences_max_soundmixer_length" />
        <Preference
            android:summary="@string/preferences_bpm_summary"
            android:title="@string/preferences_bpm_title"
            android:key="preferences_bpm" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/preferences_category_recorder_title">
        <CheckBoxPreference
            android:summary="@string/preferences_playback_summary"
            android:title="@string/preferences_playback"
            android:defaultValue="true"
            android:key="preferences_playback"/>
        <CheckBoxPreference
            android:summary="@string/preferences_add_at_current_position_summary"
            android:title="@string/preferences_add_at_current_position"
            android:defaultValue="false"
            android:key="preferences_add_at_current_position"/>
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/preferences_category_sound_title">
        <Preference
            android:summary="@string/preferences_set_bpm_summary"
            android:title="@string/preferences_set_bpm_title" />
    </PreferenceCategory>
</PreferenceScreen>