<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/soundtrack_context_edit"
        android:title="@string/sound_track_menu_entry_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom|withText"  
    />
 
    <item
        android:id="@+id/soundtrack_context_copy"
        android:title="@string/sound_track_menu_entry_copy"
        android:icon="@drawable/ic_action_copy_music"
        android:showAsAction="ifRoom|withText"         
    />
 
    <item
        android:id="@+id/soundtrack_context_delete"
        android:title="@string/sound_track_menu_entry_delete"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="ifRoom|withText"
    />
</menu>